<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlickrViewer</string>
    <string name="header_main">Welcome,</string>
    <string name="header_explain1">View the most recent uploads</string>
    <string name="header_explain2">of Flickr users.</string>
    <string name="image_title">Flickr Image</string>

    <string name="accept">Accept</string>
    <string name="decline">Continue</string>
    <string name="onWeb">View on Flickr</string>
    <string name="title_flickrphoto_detail">Detail View</string>

    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_shared_dialog">Login</string>
    <string name="action_favorite">Favorite</string>

    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="exampleUser">Johnny123</string>
</resources>
