<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@drawable/ic_action_action_search"
          android:orderInCategory="1"
          android:showAsAction="always" />
    <item android:id="@+id/action_refresh"
          android:title="@string/action_refresh"
          android:icon="@drawable/ic_action_navigation_refresh"
          android:orderInCategory="2"
          android:showAsAction="always" />
    <item android:id="@+id/action_shared_dialog"
          android:title="@string/action_shared_dialog"
          android:icon="@drawable/ic_action_device_access_accounts"
          android:orderInCategory="3"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_favorite"
          android:title="@string/action_favorite"
          android:icon="@drawable/ic_action_rating_favorite"
          android:orderInCategory="4"
          android:showAsAction="never" />
</menu>
