<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/username"
            android:id="@+id/textView" android:layout_marginTop="20dp" android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_editText" android:hint="@string/exampleUser" android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/password"
            android:id="@+id/textView2" android:layout_marginLeft="20dp" android:layout_marginRight="20dp"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="6"
            android:id="@+id/password_editText" android:layout_marginBottom="20dp" android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
</LinearLayout>